Reglage no repeat sur logo aside

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ header {
     background-size: 125%;
     background-position: center center;
     background-color:#143143;
+    background-repeat: no-repeat;
 }
 
 .headerxs h1 {
